# movievault

./: .gitignore  README.md
backend/: .env.example  check_db.py  pyproject.toml  requirements.txt
backend/app/: auth.py  database.py  firebase.py  main.py  mpesa.py  schemas.py
backend/app/routes/: admin.py  auth.py  movies.py  payments.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: FeaturedMoviesSlider.js  Footer.js  MovieCard.js  Navbar.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: AdminDashboard.js  AdminMovies.js  AdminMusic.js  AdminUsers.js  Home.js  Login.js  MovieDetail.js  Music.js  MyLibrary.js  Register.js  Stream.js  TVSeries.js  Trailer.js  Trending.js
frontend/src/services/: api.js  firebase.js
frontend/src/utils/: youtube.js
