[tool.poetry]
name = "movievault"
version = "1.0.0"
description = "MovieVault Backend API"
authors = ["Developer"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.32.0"}
motor = "3.6.0"
pymongo = "4.10.1"
pydantic = "2.9.2"
pydantic-settings = "2.6.1"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.12"
httpx = "0.27.2"
firebase-admin = "6.5.0"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
