[tool.poetry]
name = "movievault"
version = "1.0.0"
description = "MovieVault Backend API"
authors = ["Developer"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
motor = "3.3.2"
pymongo = "4.6.1"
pydantic = "1.10.15"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.6"
httpx = "0.25.2"
firebase-admin = "6.4.0"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
